@@ -15,8 +15,15 @@ extern "C" {
 #define BIF_DONTGOBELOWDOMAIN 2
 #define BIF_STATUSTEXT 4
 #define BIF_RETURNFSANCESTORS 8
+#define BIF_EDITBOX 16
+#define BIF_VALIDATE 32
+#define BIF_NEWDIALOGSTYLE 64
+#define BIF_BROWSEINCLUDEURLS 128
+#define BIF_USENEWUI ( BIF_EDITBOX | BIF_NEWDIALOGSTYLE )
 #define BIF_BROWSEFORCOMPUTER 0x1000
 #define BIF_BROWSEFORPRINTER 0x2000
+#define BIF_BROWSEINCLUDEFILES 0x4000
+#define BIF_SHAREABLE 0x8000
 #define BFFM_INITIALIZED 1
 #define BFFM_SELCHANGED 2
 #define BFFM_SETSTATUSTEXT (WM_USER + 100)
